// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package objectengine.master.v1;

message ListTenantsRequest {}

message ListTenantsResponse { repeated TenantDesc descs = 1; }

message CreateTenantRequest {
  string name = 1;
  TenantOptions options = 2;
}

message CreateTenantResponse { TenantDesc desc = 1; }

message UpdateTenantRequest {
  string name = 1;
  TenantOptions options = 2;
}

message UpdateTenantResponse { TenantDesc desc = 1; }

message DeleteTenantRequest { string name = 1; }

message DeleteTenantResponse {}

message DescribeTenantRequest { string name = 1; }

message DescribeTenantResponse { TenantDesc desc = 1; }

message TenantDesc {
  string name = 1;
  TenantOptions options = 2;
  TenantProperties properties = 3;
}

message TenantOptions {}

message TenantProperties { uint64 num_buckets = 1; }
